@@ -35,7 +35,7 @@ jobs:
       image: ${{ matrix.image }}
 
     env:
-      QT_VERSION: 6.8.1
+      QT_VERSION: 6.8.2
 
     steps:
       - uses: actions/checkout@v4
@@ -164,7 +164,7 @@ jobs:
     if: ${{ github.repository_owner == 'danmar' }}
 
     env:
-      QT_VERSION: 6.8.1
+      QT_VERSION: 6.8.2
 
     steps:
       - uses: actions/checkout@v4
